# LineageCheating

./: .editorconfig  CMakeLists.txt  test.cpp
backend/: CMakeLists.txt
backend/src/: assist_program.cpp  assist_program.hpp  assist_program_config.cpp  assist_program_config.hpp  data_struct_converter.hpp  data_struct_rw.cpp  data_struct_utils.hpp  game_data.cpp  game_data.hpp  hid_api.cpp  hid_api.hpp  opencv_utils.cpp  opencv_utils.hpp  proportion_rect.hpp  rgb_color.hpp
backend/src/backend/: data_struct_rw.hpp  hid_api.cpp  proportion_pos.hpp
backend/src/private/: game_frame_utils.cpp  game_frame_utils.hpp  identifyHpMp.cpp  identifyHpMp.hpp  identify_hp_mp.cpp  identify_hp_mp.hpp  identify_num.cpp  identify_num.hpp  monster_name.cpp  monster_name.hpp  msdk.h  ocr.cpp  ocr.hpp  opencv_utils.cpp  opencv_utils.hpp  tess_api.cpp  tess_api.hpp  text_detect_mser.cpp  text_detect_mser.hpp
backend/src/public/backend_api/: backend_api.cpp  backend_api.hpp  cheating_config.cpp  cheating_config.hpp  hid_api.cpp  hid_api.hpp  progress.cpp  progress.hpp  types.hpp
data/: cheating_config.json  game_data.json
frontend/: CMakeLists.txt
frontend/cmake/templates/: config.h.in
frontend/languages/: zh.json
frontend/resources/: app.qrc
frontend/src/: CMakeLists.txt
frontend/src/app/: about_dialog.cpp  about_dialog.h  about_dialog.ui  assist_program_operate_page.cpp  assist_program_operate_page.h  assist_program_operate_page.ui  edit_assist_program_config_dialog.cpp  edit_assist_program_config_dialog.h  edit_assist_program_config_dialog.ui  edit_auto_shooting_program_config_dialog.cpp  edit_auto_shooting_program_config_dialog.h  edit_auto_shooting_program_config_dialog.ui  intro_dialog.cpp  intro_dialog.h  intro_dialog.ui  keycombination_inputer.cpp  keycombination_inputer.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  ndi_finder_worker.cpp  ndi_finder_worker.h  search_ndi_sources_dialog.cpp  search_ndi_sources_dialog.h  search_ndi_sources_dialog.ui  select_image_point_page.cpp  select_image_point_page.h  select_image_point_page.ui  select_screen_color_page.cpp  select_screen_color_page.h  select_screen_color_page.ui  settings.cpp  settings.h  sha256.hpp  test_hid_page.cpp  test_hid_page.h  test_hid_page.ui  work_config.cpp  work_config.h  (+3 more)
main/: CMakeLists.txt
main/src/: command_line_menu.hpp  format_string.hpp  image_interactive_utils.cpp  image_interactive_utils.hpp  lineage_cheating.cpp  lineage_cheating.hpp  main.cpp  tool_wrapper.cpp  tool_wrapper.hpp
remote_control/: CMakeLists.txt
remote_control/languages/: zh.json
remote_control/resources/: app.qrc
remote_control/src/: CMakeLists.txt
remote_control/src/app/: app_manager.cpp  app_manager.h  hotkey_manager.cpp  hotkey_manager.h  main.cpp  settings.cpp  settings.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  system_tray.cpp  system_tray.h
